--- a/index.html
+++ b/index.html
@@ -16,20 +16,29 @@
         <!--normalize styles start-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
         <!--normalize styles end-->
+        <!--Animate.css start-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+        <!--Animate.css end-->
         <!--Стили файла index.html-->
     <link rel="stylesheet" href="./CSS/styles.css">    
 </head>
 
-<body>
+<body data-body>
     
     <header class="header">
             <div class="container top">
             <nav class="navilist">
                     <a class="logo" href="index.html"><span>Web</span>Studio</a>
                 <ul class="list-a">
-                    <li class="list"><a class="current header-link" href="index.html">Студия</a></li>
-                    <li class="list"><a class="header-link" href="portfolio.html">Портфолио</a></li>
-                    <li class="list"><a class="header-link" href="contakt">Контакты</a></li>
+                    <li class="list">
+                        <a class="current header-link" href="index.html">Студия</a>
+                    </li>
+                    <li class="list">
+                        <a class="header-link" href="portfolio.html">Портфолио</a>
+                    </li>
+                    <li class="list">
+                        <a class="header-link" href="contakt">Контакты</a>
+                    </li>
                 </ul>
         </nav> 
         <ul class="nav">
@@ -48,29 +57,20 @@
         <main>
             <section class="header-block box overliay">
             <div class="container">
-                <h1 class="block">
+                <h1 class="block animate__animated animate__lightSpeedInRight">
                 Эффективные решения для вашего бизнеса
             </h1>
+            <button  class="header-button" type="button" data-modal-open="">Заказать услугу</button>
 
-
-            <button data-modal-open="" class="header-button" type="button" >Заказать услугу</button>
-
-
-
-            <div class="backdrop is-hidden" data-modal>
-                <div class="modal">
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, ex.,
-                    </p>
-                    <button data-modal-close=""><svg class="icon-close" width="18" height="18">
-                        <use href="./imeges/icons.svg#icon-close"></use>
-                    </svg></button>
-                </div>
-
-            </div>
-            
-
-
+<!--Modal window-->
+<div class="backdrop is-hidden" data-modal="">
+    <div class="modal">
+        <button class="modal-close-button" type="button" data-modal-close="">
+            <svg class="icon-close" width="20" height="20">
+                <use href="./imeges/icons.svg#icon-close"></use>
+            </svg></button>
+    </div>
+</div>
 
             </div>
         </section> 
@@ -143,21 +143,21 @@
                     <a href="./imeges/img1.jpg"><img src="./imeges/img1.jpg" alt="клавиатура" width="370"
                             height="294" /></a>
                     <div class="label">
-                        <h3 class="meta">Десктопные приложения</h3>
+                        <p class="meta">Десктопные приложения</p>
                     </div>        
                 </li>
                 <li class="about-a">
                     <a href="./imeges/img2(1).jpg"><img src="./imeges/img2(1).jpg" alt="планшет" width="370"
                             height="294" /></a>
                         <div class="label">
-                            <h3 class="meta">Мобильные приложения</h3>
+                            <p class="meta">Мобильные приложения</p>
                         </div>
                 </li>
                 <li class="about-a">
                     <a href="./imeges/img3.jpg"><img src="./imeges/img3.jpg" alt="телефон" width="370"
                             height="294" /></a>
                         <div class="label">
-                            <h3 class="meta">Дизайнерские решения</h3>
+                            <p class="meta">Дизайнерские решения</p>
                         </div>
                 </li>
             </ul>
