--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
         <main>
             <section class="header-block box overliay">
             <div class="container">
-                <h1 class="block animate__animated animate__lightSpeedInRight">
+                <h1 class="block">
                 Эффективные решения для вашего бизнеса
             </h1>
-            <button  class="header-button" type="button" data-modal-open="">Заказать услугу</button>
+            <button  class="header-button animate__animated animate__lightSpeedInRight" type="button" data-modal-open="">Заказать услугу</button>
 
 <!--Modal window-->
 <div class="backdrop is-hidden" data-modal="">
